{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 26,
  "lineage": "1c8235b3-96f7-5d1f-95db-8af6b9ac6e18",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_chatbot_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-10T03:32:57.346-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/intense-attic-466017-k7/global/firewalls/allow-chatbot-http",
            "log_config": [],
            "name": "allow-chatbot-http",
            "network": "https://www.googleapis.com/compute/v1/projects/intense-attic-466017-k7/global/networks/adk-chatbot-network",
            "priority": 1000,
            "project": "intense-attic-466017-k7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/intense-attic-466017-k7/global/firewalls/allow-chatbot-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "adk-chatbot"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-10T03:57:36.088-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/intense-attic-466017-k7/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/intense-attic-466017-k7/global/networks/adk-chatbot-network",
            "priority": 1000,
            "project": "intense-attic-466017-k7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/intense-attic-466017-k7/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "adk-chatbot"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "adk_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250709",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/intense-attic-466017-k7/zones/asia-south1-c/disks/adk-chatbot-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/intense-attic-466017-k7/zones/asia-south1-c/instances/adk-chatbot-vm",
            "instance_id": "1560475610125763323",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "startup-script": "#!/usr/bin/env bash\nset -euo pipefail\n\n# ========= Config (edit if needed) =========\nAPP_USER=\"chatbot\"\nAPP_DIR=\"/opt/chat-bot-adk\"\nREPO_URL=\"https://github.com/IndieVerseStudio/chat-bot-adk.git\"\nAPP_MODULE=\"main:app\"           # change if your FastAPI app isn't main:app\nHOST=\"0.0.0.0\"\nPORT=\"8000\"\nWORKERS=\"2\"\n# ==========================================\n\necho \"[1/6] Install OS deps\"\nsudo apt-get update -y\nsudo apt-get install -y git [...]
            },
            "metadata_fingerprint": "WbCrvpqTTJo=",
            "name": "adk-chatbot-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.93.47.201",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/intense-attic-466017-k7/global/networks/adk-chatbot-network",
                "network_ip": "10.160.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/intense-attic-466017-k7/regions/asia-south1/subnetworks/adk-chatbot-network",
                "subnetwork_project": "intense-attic-466017-k7"
              }
            ],
            "project": "intense-attic-466017-k7",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/intense-attic-466017-k7/zones/asia-south1-c/instances/adk-chatbot-vm",
            "service_account": [
              {
                "email": "7575564708-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "adk-chatbot"
            ],
            "tags_fingerprint": "0scn5S5obg4=",
            "zone": "asia-south1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.debian_image",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/intense-attic-466017-k7/global/networks/adk-chatbot-network",
            "mtu": 0,
            "name": "adk-chatbot-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6374871487785323470",
            "project": "intense-attic-466017-k7",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/intense-attic-466017-k7/global/networks/adk-chatbot-network"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}